<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) Maveniverse Org.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v2.0
    which accompanies this distribution, and is available at
    https://www.eclipse.org/legal/epl-v20.html

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>62</version>
  </parent>

  <groupId>eu.maveniverse.maven.scalpel</groupId>
  <artifactId>scalpel</artifactId>
  <version>${nisse.jgit.dynamicVersion}</version>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>Scalpel Maven Extension.</description>

  <url>https://www.maveniverse.eu/scalpel</url>

  <licenses>
    <license>
      <name>EPL-2.0</name>
      <url>https://www.eclipse.org/legal/epl-2.0/</url>
    </license>
  </licenses>

  <modules>
    <module>core</module>
    <module>extension3</module>
    <module>extension</module>
    <module>it</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:maveniverse/scalpel.git</connection>
    <developerConnection>scm:git:git@github.com:maveniverse/scalpel.git</developerConnection>
    <tag>${nisse.jgit.dynamicVersion}</tag>
    <url>https://github.com/maveniverse/scalpel</url>
  </scm>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/scalpel/issues</url>
  </issueManagement>

  <ciManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/scalpel/actions</url>
  </ciManagement>

  <properties>
    <project.build.outputTimestamp>2025-12-19T13:39:09Z</project.build.outputTimestamp>

    <maven.compiler.release>17</maven.compiler.release>
    <requireRuntimeMavenVersion.range>[3.9,)</requireRuntimeMavenVersion.range>

    <!-- Maven 3 versions -->
    <maven3Version>3.9.16</maven3Version>
    <maven3ResolverVersion>1.9.27</maven3ResolverVersion>

    <version.slf4j>1.7.36</version.slf4j>
    <version.jacoco>0.8.15</version.jacoco>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Internal -->
      <dependency>
        <groupId>eu.maveniverse.maven.scalpel</groupId>
        <artifactId>core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.scalpel</groupId>
        <artifactId>extension3</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.scalpel</groupId>
        <artifactId>extension</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>eu.maveniverse.maven.shared</groupId>
        <artifactId>extension</artifactId>
        <version>0.2.6</version>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${version.slf4j}</version>
      </dependency>

      <!-- Maven (overrides) -->
      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-utils</artifactId>
        <version>3.6.1</version>
      </dependency>

      <!-- DI -->
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>1</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>org.eclipse.sisu.inject</artifactId>
        <version>1.0.0</version>
      </dependency>

      <!-- JGit -->
      <dependency>
        <groupId>org.eclipse.jgit</groupId>
        <artifactId>org.eclipse.jgit</artifactId>
        <version>7.7.1.202607240634-r</version>
      </dependency>

      <!-- Test -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>6.1.3</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>6.1.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <additionalOptions>
              <additionalOption>-private</additionalOption>
            </additionalOptions>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${version.jacoco}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>sisu-maven-plugin</artifactId>
        <version>${version.sisu}</version>
        <executions>
          <execution>
            <id>index-project</id>
            <goals>
              <goal>main-index</goal>
              <goal>test-index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>jacoco-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-report</id>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.50</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
